<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CityInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/label_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mainIndent"
                android:gravity="center"
                android:text="@string/label_city"
                android:theme="@style/SimpleText"
                app:layout_constraintBottom_toTopOf="@id/text_city"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/text_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/simpleIndent"
                android:gravity="center"
                android:text="@string/city"
                android:theme="@style/HeaderText"
                app:layout_constraintBottom_toTopOf="@id/label_temp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_city" />

        <TextView
                android:id="@+id/label_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mainIndent"
                android:gravity="center"
                android:text="@string/label_cur_temp"
                android:theme="@style/SimpleText"
                app:layout_constraintBottom_toTopOf="@id/text_curr_temp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_city" />

        <TextView
                android:id="@+id/text_curr_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/simpleIndent"
                android:gravity="center"
                android:text="@string/cur_temp"
                android:theme="@style/HeaderText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_temp" />

        <TextView
                android:id="@+id/label_pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mainIndent"
                android:gravity="center"
                android:text="@string/label_pressure"
                android:theme="@style/SimpleText"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/text_pressure"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_curr_temp" />

        <TextView
                android:id="@+id/text_pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/simpleIndent"
                android:gravity="center"
                android:text="@string/pressure"
                android:theme="@style/HeaderText"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_pressure" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>